# ac2

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: aho-corasick2_test.cpp
